1999-11-08  Jim Kingdon  <http://developer.redhat.com/>

	* log.c (cvslog): If client_active, send options to the server
	based on our parsed options rather than trying to send the exact
	strings specified (using canonical forms, like RFC822/1123
	dates, in the protocol is just cleaner).
	(send_one, send_arg_list): New functions, helpers for above.
	* sanity.sh (logopt-6a): New test, for this fix.

1999-11-09  K.J. Paradise <kj@sourcegear.com>
	
	* admin.c: made the -H option do what it is documented to 
	do.  a

1999-11-08  Tom Tromey  <tromey@cygnus.com>

	* client.c (connect_to_gserver): Print more error text if gssapi
	initialization fails.  From Assar Westerlund <assar@sics.se>.

1999-11-06  Larry Jones <larry.jones@sdrc.com>

	*sanity.sh(rcs3-5): Remote output can be out-of-order, so need a
	more general pattern to match the assertion failure.

1999-11-05  K.J. Paradise (kj@sourcegear.com)

	* history.c: Added a trap to verify that if a 
	read(file, buffer,blocksize) returns less than blocksize, 
	that we really are at the end of the file.  I can't easily
	come up with a test case where this code gets touched, so 
	it may cause problems.  All sanity tests still pass though.

1999-11-05  Jim Kingdon  <http://developer.redhat.com/>

	* sanity.sh (logopt): New test, for Larry's fix.
	* sanity.sh (log-18a, rcs-15 to rcs-19): New tests, to test -d
	and -r more thoroughly.

1999-11-05  Larry Jones <larry.jones@sdrc.com>

	* log.c (cvslog): Fix -s and -d with spaces on client side.
	(log_usage): Revert Karl's change once again.
	sanity.sh(rcs3-5): No longer get different results from local
	and client/server.

1999-11-04  Karl Fogel  <kfogel@red-bean.com>

	* log.c (log_usage): Revert Jim Kingdon's reversion of my change
	of 1999-11-03.  Allowing a space between option and argument
	results in lossage; here is a reproduction recipe: run this from
	the top of a remote copy of the cvs source tree

	   cvs log -d '>1999-03-01' > log-out.with-space
